   methods are statically provided (handleGet/Head/Post/Put/Delete). handleMove/Copy/Options/Trace are removed 
   from base Handler class (their default implementation did nothing useful anyway).
 - Renamed Form.getWebForm() into getWebRepresentation() to make space for a future getMultiPartRepresentation().

[Enhancements] 
 - HTTP calls now try to use the channel aspect of a representation before its stream aspect. 
   Suggested by Lars Heuer.
 - Added source path to JSON external plugin. Suggested by Chris Grindstaff.
 - Added support for FindBugs in the Ant build script. Suggested by Piyush Purang.
 - Added "verify" target to build script to provide a shorter cycle for developpers. 
   Contributed by Piyush Purang.
 - Slightly updated Eclipse code template file. Please re-import it if possible.
 - NRE now checks that each application has the required connectors available when starting it.
 - Added org.restlet.util.ImmutableDate.
 - Shortened author's info by removing the URI.
 - Refactored all hashCode() and equals() methods in classes of org.restlet.data package. 
   Help from Piyush Purang.
 - Added Cookie test case for complex equality/hash code verification.
 - Limited AWS patch to JDK 5.0 update 9 and lower as this should be fixed in update 10 and already works in 
   JDK 6.0.
 - Filter.doHandle() method now directly dispatch the call to the next Restlet instead of calling the super 
   class. This prevents double call to initialize() and reduces the stack trace depth. Reported by Dave Pawson.
 - Added new HTTP client connector based on Jakarta Commons HTTP Client. Allow multi-threaded connection reuse.
 - Added new constructor and methods on com.noelios.restlet.Factory to turn off auto-discovery of connectors. 
   See the getRegisteredClients() and getRegisteredServers() methods. Suggested by Mike Moran.
 - Updated Apache MINA to 0.8.4 used by AsyncWeb HTTP server connector. Suggested by Lars Heuer.
  
1.0 beta 20 (2006-11-08)
[Bugs fixed]