@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Nov 17 19:11:44 CET 2006
-build.number=506
+#Mon Nov 20 09:36:31 CET 2006
+build.number=507
